fix: jump error

--- a/entrypoints/popup/style.css
+++ b/entrypoints/popup/style.css
@@ -1,3 +1,9 @@
+html,
+body {
+  margin: 0;
+  padding: 0;
+}
+
 h2,
 h3,
 p {
